# BS-Project

./: README.md
backend/: .dockerignore  .gitignore  .pdm-python  Dockerfile  app.py  config.py  config.toml  config_sample.toml  database.py  docker-compose.yml  informer.py  models.py  pyproject.toml  req.html  resq.py  scraper.py  soup.html  taobao.html  tasks.py  test.html  utils.py
docs/: BS 设计报告.md  icon.pptx  使用手册.md  开发日志.md
frontend/: .gitignore  Dockerfile  docker-compose.yml  index.html  nginx_front.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  store.ts  types.ts  utils.ts
frontend/src/components/: GoodCard.tsx  GoodDetailCard.tsx  NavBar.tsx  PageLayout.tsx  ProductCard.tsx
frontend/src/pages/: GoodDetail.tsx  GoodDetailPage.tsx  LoginPage.tsx  ProductDetail.tsx  SearchPage.tsx  SignUpPage.tsx  SubscriptionPage.tsx
