[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["cjlworld <cjlworld@outlook.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "3.10.1"
beautifulsoup4 = "4.11.2"
fastapi = "0.115.6"
fastapi-jwt = "0.3.0"
jieba = "0.42.1"
loguru = "0.7.2"
passlib = "1.7.4"
playwright = "1.49.0"
pydantic = {extras = ["email"], version = "^2.10.3"}
sqlalchemy = "2.0.27"
toml = "0.10.2"
fastapi-cli = "^0.0.7"
aiomysql = "^0.2.0"
authlib = "^1.3.2"
argon2-cffi = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
