[tool.pdm]
distribution = false

[tool.pdm.build]
includes = []

[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "cjlworld", email = "cjlworld@outlook.com"},
]
dependencies = [
    "apscheduler==3.10.1",
    "beautifulsoup4==4.11.2",
    "fastapi==0.115.6",
    "fastapi-jwt==0.3.0",
    "jieba==0.42.1",
    "loguru==0.7.2",
    "passlib==1.7.4",
    "playwright==1.49.0",
    "pydantic[email]<3.0.0,>=2.10.3",
    "sqlalchemy==2.0.27",
    "toml==0.10.2",
    "fastapi-cli<1.0.0,>=0.0.7",
    "aiomysql<1.0.0,>=0.2.0",
    "authlib<2.0.0,>=1.3.2",
    "argon2-cffi<24.0.0,>=23.1.0",
    "openai==1.58.0",
]
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = {text = "MIT"}